# whitney

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: blind-test.yml  corpus.yml
docs/: SCANNER.md  TRIAGE.md
docs/sample-reports/: sbom.html  scan.html
docs/superpowers/specs/: 2026-04-26-html-reports-design.md
tests/: test_html_report.py
tests/corpus/: DIFFERENTIAL.md  README.md  __init__.py  _licenses_allowlist.txt  coverage.py  eval.py  loader.py  test_corpus.py  test_doc_integrity.py
tests/corpus/_deferred/dropped_multi_turn/: pi_005_multi_turn_unbounded_history.py  pi_005_multi_turn_unbounded_history.yaml
tests/corpus/_deferred/dropped_tier_s/: pi_n03_allowlist_id_dispatch.py  pi_n03_allowlist_id_dispatch.yaml
tests/corpus/_deferred/phase_e_agent_unrestricted_tools/: pi_t2_002_dvla_tools_no_authz.py  pi_t2_002_dvla_tools_no_authz.yaml
tests/corpus/_experiment/: whitney-taint.yaml
tests/corpus/prompt_injection/negatives/: pi_n01_bedrock_guardrails.py  pi_n01_bedrock_guardrails.yaml  pi_n02_lakera_guard_pre_call.py  pi_n02_lakera_guard_pre_call.yaml  pi_n03_nemo_guardrails_rails_generate.py  pi_n03_nemo_guardrails_rails_generate.yaml  pi_n04_llm_as_judge_correct_prompt.py  pi_n04_llm_as_judge_correct_prompt.yaml  pi_n05_azure_prompt_shields.py  pi_n05_azure_prompt_shields.yaml  pi_n06_openai_moderation.py  pi_n06_openai_moderation.yaml  pi_n07_llm_guard_scan_prompt.py  pi_n07_llm_guard_scan_prompt.yaml  pi_n08_rebuff_detect_injection.py  pi_n08_rebuff_detect_injection.yaml  pi_n09_guardrailsai_validate.py  pi_n09_guardrailsai_validate.yaml  pi_t2_n01_dvla_with_bedrock_guardrail.py  pi_t2_n01_dvla_with_bedrock_guardrail.yaml  pi_t2_n02_broken_llm_prompt_leaking_lv4_nemo.py  pi_t2_n04_broken_llm_p2sql_lv5_llm_judge.py  (+8 more)
whitney/: __init__.py  cli.py  html_report.py  llm_triage.py  models.py  sbom.py  scanner.py  semgrep_runner.py
whitney/rules/: prompt_injection_critical_sinks.yaml  prompt_injection_structural.yaml  prompt_injection_taint.yaml
(+56 files in other folders)
